# kev_test_whanos_examples

./: BUILD.md  CMakeLists.txt  Dockerfile  Makefile  README.md  TEST_POWERUPS_README.md  build.sh  cleanup_component_registration.sh  conanfile.txt  kev_test.sh  setup.ps1  setup.sh  test_debug.sh  test_force_toggle.md  whanos.yaml
All_src/managers/: SceneManager.cpp
All_src/scenes/: ConnectionScene.cpp  CreateRoomScene.cpp  GameScene.cpp  LoseScene.cpp  MenuScene.cpp  OnlineClientGameScene.cpp  OnlineModeScene.cpp  Online_GameScene_server.cpp  ScoreScene.cpp  TestGameScene.cpp  WinScene.cpp
All_src/sfml/: SfmlFont.cpp  SfmlInputManager.cpp  SfmlMusic.cpp  SfmlResourceFactory.cpp  SfmlSound.cpp  SfmlSprite.cpp  SfmlTexture.cpp  SfmlWindow.cpp
Assets/scripts/: black_phantom.lua  boss_guardian.lua
Client/: CMakeLists.txt
Client/include/: Client.hpp  NetworkClient.hpp  OfflineApplication.hpp  OnlineApplication.hpp  Packet.hpp  Protocole.hpp
Client/modif_file/: Client.cpp  NetworkClient.cpp  OnlineApplication.cpp
Client/src/: Client.cpp  ClientApplication.cpp  NetworkClient.cpp  OfflineApplication.cpp  OnlineApplication.cpp  Protocole.cpp  main_client.cpp
Config/: archetypes.json  scenes.json
Config/archetypes/: audio.json  bosses.json  enemies.json  force.json  player.json  powerups.json  projectiles.json  scenery.json  ui.json  weapons.json
Config/levels/: level_1.json  test_all_powerups.json  test_all_weapons.json  test_powerups.json  test_projectiles_only.json  test_weapons.json  weapon_test.json
GameEngine/: TestApplication.cpp  main.cpp
GameEngine/Core/: Clock.cpp  GameEngine.cpp  LuaEntity.cpp
GameEngine/managers/: LevelManager.cpp  ReplayManager.cpp  ResourceManager.cpp  ScriptingManager.cpp
Include/All/: Component.hpp
Include/All/Scenes/: ConnectionScene.hpp  CreateRoomScene.hpp  GameScene.hpp  LoseScene.hpp  MenuScene.hpp  OnlineClientGameScene.hpp  OnlineModeScene.hpp  Online_GameScene_server.hpp  ScoreScene.hpp  TestGameScene.hpp  WinScene.hpp
Include/All/interfaces/: IApplication.hpp  IFont.hpp  IInputManager.hpp  IMusic.hpp  INetwork.hpp  IResourceFactory.hpp  IScene.hpp  ISound.hpp  ISprite.hpp  ISystem.hpp  ITexture.hpp  IWindow.hpp
Include/All/managers/: SceneManager.hpp
Include/All/sfml/: SfmlFont.hpp  SfmlInputManager.hpp  SfmlMusic.hpp  SfmlResourceFactory.hpp  SfmlSound.hpp  SfmlSprite.hpp  SfmlTexture.hpp  SfmlWindow.hpp
Include/All/systems/: AISystem.hpp  AnimationSystem.hpp  ButtonSystem.hpp  CollisionSystem.hpp  DeathSystem.hpp  EnemyShootingSystem.hpp  ForceCollisionSystem.hpp  ForceControlSystem.hpp  ForceInitSystem.hpp  ForceSystem.hpp  HealthBarSystem.hpp  LifespanSystem.hpp  MovementSystem.hpp  MusicSystem.hpp  OffScreenDeathSystem.hpp  ParallaxSystem.hpp  PlayerControlSystem.hpp  PlayerShootingSystem.hpp  PowerUpSystem.hpp  RenderSystem.hpp  SaveLoadSystem.hpp  ScriptSystem.hpp  SoundSystem.hpp  WeaponSystem.hpp
Include/Client_include/: ClientApplication.hpp
Include/GameEngine_Include/: Registry.hpp  sparse_array.hpp
Include/GameEngine_Include/core/: Clock.hpp  Event.hpp  GameEngine.hpp  LuaEntity.hpp  Serializer.hpp
Include/GameEngine_Include/factories/: SystemAutoRegister.hpp  SystemFactory.hpp
Include/GameEngine_Include/managers/: LevelManager.hpp  ReplayManager.hpp  ResourceManager.hpp  ScriptingManager.hpp
Include/GameEngine_Include/scenes/: SceneConfig.hpp
Include/GameEngine_Include/testClass/: TestApplication.hpp
Include/Server/: C2S_PLAYER_INPUT.hpp  Entity.hpp  S2C_ENTITY_DESTROY.hpp  S2C_ENTITY_SPAWN.hpp  S2C_ENTITY_UPDATE.hpp  S2C_PLAYER_DEATH.hpp  S2C_PLAYER_VICTORY.hpp  opcode.hpp
Server/: CMakeLists.txt  README.md  README_SNAPSHOT.md
Server/include/: Client.hpp  Error.hpp  GameLogic.hpp  Input.hpp  InputQueue.hpp  Protocol.hpp  Room.hpp  RoomManager.hpp  ServerApplication.hpp  ServerOfflineApplication.hpp  Snapshot.hpp  SnapshotHelper.hpp  SnapshotSender.hpp  Types.hpp  UDPListener.hpp
Server/src/: Client.cpp  GameLogic.cpp  Protocol.cpp  Room.cpp  RoomManager.cpp  ServerApplication.cpp  ServerOfflineApplication.cpp  Snapshot.cpp  SnapshotHelper.cpp  SnapshotSender.cpp  UDPListener.cpp  main.cpp
docs/: Archetype_References_System.md  Auto_Registration_Guide.md  Component_Registration_Migration.md  Force_Documentation.md  Migration_Multithreaded.md  Multithreaded_Engine.md  MusicSystem_Documentation.md  POWERUP_SPRITES_TODO.md  Protocol.txt  Test_ALL_PowerUps_Guide.md  Test_Weapons_Guide.md  Threading_Best_Practices.md  Threading_Race_Conditions.md  Weapon_Test_Guide.md
docs/R-Type_Documentation/docs/: DEVELOPER.md  README.md  TECHNOLOGY_ANALYSIS.md  index.md
docs/R-Type_Documentation/docs/.vitepress/: config.ts
docs/diagrams/: README.md
memories/: GameScene.cpp  LoseScene.cpp  MenuScene.cpp  ScoreScene.cpp  WinScene.cpp
